<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="example.com.timtro.MainActivity"
    tools:showIn="@layout/app_bar_main3">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/color3"
            android:layout_marginRight="10dp"
            android:text="@string/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et1"
            android:inputType="text"
            android:textColor="@color/color3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/color3"
            android:layout_marginRight="10dp"
            android:text="@string/tuoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et2"
            android:inputType="number"
            android:textColor="@color/color3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/color3"
            android:layout_marginRight="10dp"
            android:text="@string/gioitinh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/spiner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/color3"
            android:layout_marginRight="10dp"
            android:text="@string/sdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et3"
            android:inputType="number"
            android:textColor="@color/color3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/color3"
            android:layout_marginRight="10dp"
            android:text="@string/diachi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/et4"
            android:textColor="@color/color3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/color3"
        android:text="@string/thongtinphong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TableLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ở với chủ" />
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhà vệ sinh trong" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Có gác lửng" />
            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Giờ giới nghiêm" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cho nấu ăn" />
            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cổng khóa" />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btchontep"
            android:layout_marginRight="10dp"
            android:text="Chọn tệp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"/>
        <ImageView
            android:id="@+id/imv"
            android:layout_width="@dimen/img_view_upload_width"
            android:layout_height="@dimen/img_view_upload_height" />

    </LinearLayout>

    <Button
        android:id="@+id/btluu"
        android:onClick="onClick"
        android:layout_gravity="center"
        android:textColor="@color/color_white"
        android:background="@color/colorPrimary"
        android:text="Lưu bài đăng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
